 * Tweaked the subscriptions to look better under HTML
 * Made <a href=""> convert to text by inserting the URL in brackets after
    the link text.
 * Rewrote collapse conditions to handle more complicated paramteters, ready
    for the new workflow code.
 * The email methods have a new hash based set of paramters. This will break
    any configs with custom email setups, but should be easy to adapt them.
 * EPrints now set automatic fields when they first get created. 

2006-04-06 cjg

 * XML to_string method now allows ProcessingInstructions. Things in <?..?>

2006-04-28 cjg

 * Added cookie authentication
 * Removed old basic auth configuration
 * Split current_user and authentication methods into basic and cookie
 * Added a read_params method to session. Session parameters are not consumed
    until needed.
 * A SQL table stores the tickets for logged in users.

2006-04-28 cjg

 * Fixed only-one-result bug. 
 * Made user methods only request one result for by-username etc.

2006-05-02 cjg

 * Minor style changes to LogHandler
 * Commended out not-yet-working GEOIP code.

2006-05-03 cjg

 * Remove duplicate ->connection line in Session
 * Added a check to current_user_cookie to check it's not in command line mode.
 * When an undef is passed into List->get_ids for the count, but not the offset,
    it now works out the correct value rather than printing a warning.
 * Made default directory /opt/eprints not /opt/eprints2
 * Updated bin/ scripts to use /opt/eprints/bin by default
 * auto apache config files are now stored in var dirs rather than cfg
 * removed config element sys_path as it is not used.

2006-05-04 cjg

 * Fixed bug in List which was introduced by the code which skipped caches when
    only item was required. The bug occured when ALL items where requested.
 * DataObj->render_full no longer renders subobjects.
 * Fixed a warning in DataObj/Subject.pm
 * ArchiveConfig can now handle an eprint without a valid userid.