@@ -21,7 +21,8 @@ exit( 0 ) unless( defined $session );
 
 my $path_info = $session->get_request->path_info;
 
-unless( $path_info =~ m!^/([0-9]+)(/([^/]*)?)?! ) {
+unless( $path_info =~ m!^/([0-9]+)(/([^/]*)?)?! ) 
+{
 	error( $session, $session->html_phrase( "cgi/export:no_id" ) );
 	$session->terminate;
 	exit;
@@ -32,12 +33,15 @@ my $afterid = $2;
 my $format = $3;
 my $export_url = $session->get_repository->get_conf( "perl_url" )."/export";
 
-if( !defined $id ) {
+if( !defined $id ) 
+{
 	error( $session, $session->html_phrase( "cgi/export:no_id" ) );
 	$session->terminate;
 	exit;
 }
-if( !defined $afterid ) {
+
+if( !defined $afterid ) 
+{
 	$session->redirect( $export_url."/".$id."/" );
 	$session->terminate;
 	exit;
@@ -47,7 +51,9 @@ my $eprint = EPrints::DataObj::EPrint->new(
 			$session, 
 			$id, 
 			$session->get_repository->get_dataset( "archive" ) );
-if( !defined $eprint ) {
+
+if( !defined $eprint || $eprint->get_value( "metadata_visibility" ) eq "hide" ) 
+{
 	error( 
 		$session, 
 		$session->html_phrase( 
@@ -57,7 +63,8 @@ if( !defined $eprint ) {
 	exit;
 }
 
-if( !defined $format || $format eq "" ) {
+if( !defined $format || $format eq "" ) 
+{
 	my $title = $session->html_phrase( "cgi/export:title",
 			shortname=>$eprint->render_description );
 	my $page = $session->html_phrase( "cgi/export:page",
@@ -75,7 +82,8 @@ my @plugins = $session->plugin_list(
 				is_visible=>"all" );
 my $ok = 0;
 foreach( @plugins ) { if( $_ eq "Export::$format" ) { $ok = 1; last; } }
-unless( $ok ) {
+unless( $ok ) 
+{
 	error( $session, $session->html_phrase( "cgi/export:not_available",
 				format => $session->make_text( $format ) ) );
 	$session->terminate;
