@@ -30,6 +30,9 @@ for( my $d=0; $d<7; ++$d )
 {
 	my $t = time-60*60*24*$d;
 	my $searchexp = new EPrints::Search(
+		filters => [
+			{ meta_fields=>[ 'metadata_visibility' ], value=>'show', match=>'EX', describe=>0 },
+		],
 		session => $session,
 		dataset => $ds );
 	
