@@ -58,6 +58,8 @@ sub process
 	$list->map( sub {
 		my( $session, $dataset, $eprint ) = @_;
 
+		return if( $eprint->get_value( "metadata_visibility" ) eq "hide" );
+
 		my $p = $session->make_element( "p" );
 		$p->appendChild( $eprint->render_citation_link() );
 		$page->appendChild( $p ); 
@@ -70,7 +72,6 @@ sub process
 		$page,
 		"user_eprints" );
 	$session->send_page();
-
 }
 
 
