@@ -3670,8 +3670,16 @@ PACKAGE: 2.2.99.2
 
 2006-05-04 cjg
 
- * Fixed bug in List which was introduced by the code which skipped caches when
-    only item was required. The bug occured when ALL items where requested.
+ * Fixed bug in List which was introduced by the code which skipped caches 
+    when only item was required. The bug occured when ALL items where 
+    requested.
  * DataObj->render_full no longer renders subobjects.
  * Fixed a warning in DataObj/Subject.pm
  * ArchiveConfig can now handle an eprint without a valid userid.
+ * New system field for EPrints - metadata_visibility which can either be 
+    'show' meaning the normal behaviour, "no_search" which stops the 
+    metadata appearing on public searches and browse, but does not hide 
+    the abstract page, and "hide" which supresses the data and abstract 
+    page from all non-registered users. no_search does not remove the item 
+    from OAI, but hide does.
+
